package br.upe.computacao.pweb.gerasenhas.gerasenhasapi.base;

public class GeraSenhasException extends RuntimeException {

    public GeraSenhasException(String string) {
        super(string);
    }

}
