package br.upe.computacao.pweb.gerasenhas.gerasenhasapi.controle;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;
import br.upe.computacao.pweb.gerasenhas.gerasenhasapi.modelo.ConfiguracaoGeraSenhaBO;
import br.upe.computacao.pweb.gerasenhas.gerasenhasapi.modelo.SenhaBO;
import br.upe.computacao.pweb.gerasenhas.gerasenhasapi.servico.GeraSenhaServico;

@RequestMapping("/api/v1/")
@RestController
public class GeraSenhasControle {

    @Autowired
    private GeraSenhaServico servico;

    @PostMapping("/senha")
    public ResponseEntity<SenhaBO> gerarSenha(@RequestBody ConfiguracaoGeraSenhaBO configuracao) {
        return new ResponseEntity<SenhaBO>(servico.gerarSenha(configuracao), HttpStatus.CREATED);
    }
}
