@startuml "Gera Senhas API"

skinparam classAttributeIconSize 0

class GeraSenhasControle{
    - servico : GeraSenhaServico
    + gerarSenha(configuracao : ConfiguracaoGeraSenhaBO) : ResponseEntity<SenhaBO>
}

class GeraSenhasException{
    + GeraSenhasException(string : String)
}

class ConfiguracaoGeraSenhaBO{
    - tamanho : Integer
    - maiuscula : Boolean
    - minuscula : Boolean
    - numeros : Boolean
    - especiais : Boolean
    + obterQuantidadeConfiguracoes() : int
    + qtdCaracteresPorToken() : int
    + isNaoConfigurado() : boolean
    + isConfigurado() : boolean
}

class SenhaBO{
    + senha : String
    - configuracao : ConfiguracaoGeraSenhaBO
    - geracao : LocalDateTime
}

class GeraSenhaServico{
    + gerarSenha(configuracao : ConfiguracaoGeraSenhaBO) : SenhaBO
}

enum CaracterEspecialData {
    Special_Unicode
}

GeraSenhasException --|> RuntimeException
GeraSenhasControle -- GeraSenhaServico
SenhaBO -- ConfiguracaoGeraSenhaBO
GeraSenhaServico -- CaracterEspecialData

@enduml